# q1k-neuroimaging

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_doc.txt
.github/workflows/: build_docs.yml  test_installation.yaml
docs/source/: conf.py  index.rst
docs/source/lab_specifications/: index.rst
docs/source/tasks/: anti_saccade.rst  face_social_preference.rst  gap_overlap.rst  index.rst  mmn.rst  natural_social_preference.rst  plr.rst  rest.rst  ssaep.rst  ssvep.rst  visual_search.rst
docs/source/tutorials/: index.rst
